--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
   </head>
   <body>
     <div id="app"></div>
+    <p class="year">
+      <button class="lt">&lt;</button>
+      <span>2022</span>
+      <button class="gt">&gt;</button>
+    </p>
+    <p class="month">
+      <button class="lt">&lt;</button>
+      <span>10</span>
+      <button class="gt">&gt;</button>
+    </p>
 
     <script src="./src/app.js" type="module"></script>
   </body>
